--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-name: Generate Datas
+name: Generate Snake Contribution Graph
+
 on:
   schedule:
     - cron: "0 */12 * * *"  # every 12 hours
@@ -6,19 +7,25 @@ on:
 
 jobs:
   build:
-    name: Jobs to update datas
+    name: Generate Snake
     runs-on: ubuntu-latest
+
     steps:
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: Generate Snake SVG
+        uses: Platane/snk@v3
         with:
           github_user_name: omamoh18
-          svg_out_path: github-contribution-grid-snake.svg  # ⬅️ output to root
+          outputs: |
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
-          build_dir: .  # ⬅️ publish from root
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
