--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,20 +11,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Snake Animation
+      # Checkout the repo
+      - uses: actions/checkout@v3
+
+      # Generate Snake Animation SVG
       - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: omamoh18
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_out_path: github-contribution-grid-snake.svg  # ✅ Output to root
 
       # Deploy to GitHub Pages
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
-          build_dir: dist
+          build_dir: .  # ✅ Deploy from current directory
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
 
 
