--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,33 +2,35 @@ name: Generate Datas
 
 on:
   schedule:
-    - cron: "0 */12 * * *"
+    - cron: "0 */12 * * *"  # every 12 hours
   workflow_dispatch:
 
 jobs:
   build:
+    name: Generate Snake Animation
     runs-on: ubuntu-latest
 
     steps:
-      # ✅ Check out full repo history including output branch
+      # ✅ Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Needed for branch history
-          ref: main       # Make sure you base from main
+          fetch-depth: 0
+          ref: main
 
-      # 🐍 Generate the Snake SVG
+      # ✅ Generate the SVG animation and output it to root
       - name: Generate snake animation
         uses: Platane/snk@master
         with:
           github_user_name: omamoh18
           svg_out_path: github-contribution-grid-snake.svg
 
-      # 🚀 Deploy to GitHub Pages
+      # ✅ Deploy the root folder to GitHub Pages
       - name: Deploy to GitHub Pages
         uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target_branch: output
-          build_dir: .
+          target_branch: output           # The branch to deploy to
+          build_dir: .                    # Deploy from the root
+          create_branch: true             # 🔧 Ensures the branch is created if missing
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
