--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,36 +1,27 @@
 name: Generate Datas
 
 on:
-  schedule:
-    - cron: "0 */12 * * *"  # every 12 hours
+  schedule: # execute every 12 hours
+    - cron: "0 */12 * * *"
   workflow_dispatch:
 
 jobs:
   build:
-    name: Generate Snake Animation
+    name: Jobs to update datas
     runs-on: ubuntu-latest
 
     steps:
-      # ✅ Checkout the repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          ref: main
-
-      # ✅ Generate the SVG animation and output it to root
-      - name: Generate snake animation
-        uses: Platane/snk@master
+      # Snake Animation
+      - uses: Platane/snk@master
+        id: snake-gif
         with:
           github_user_name: omamoh18
-          svg_out_path: github-contribution-grid-snake.svg
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # ✅ Deploy the root folder to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      # Deploy to GitHub Pages
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          target_branch: output           # The branch to deploy to
-          build_dir: .                    # Deploy from the root
-          create_branch: true             # 🔧 Ensures the branch is created if missing
+          target_branch: output
+          build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
